fix(tables): fix table alignment
- adds styles to align tables correctly
- adds a Fragment to render the table

[Finishes #164827857]

--- a/src/components/TableComponents/Cell/cell.css
+++ b/src/components/TableComponents/Cell/cell.css
@@ -9,15 +9,15 @@
   box-sizing: border-box;
   display: table-cell;
   min-width: 100px;
-  padding: 13px 5px 17px;
+  padding: 13px 10px 17px;
 }
 
 .dashboard-table__header .dashboard-table__cell {
-  padding: 9px 2px 11px;
+  padding: 9px 10px 11px;
 }
 
 .dashboard-table__cell:first-child {
-  padding-left: 2rem;
+  padding-left: 50px;
   width: 200px;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
@@ -26,20 +26,22 @@
 }
 
 .dashboard-table__cell:nth-child(2) {
-  width: 6.25rem;
-  padding-left: 0.625rem;
   left: 12em;
 }
 
 .dashboard-table__cell:nth-child(n + 3) {
-  width: 6.25rem;
-  position: sticky;
+  text-align: left;
+}
+
+span.row span.pl-2 {
+  padding-left: 1rem !important;
 }
 
 .dashboard-table__cell:last-child {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
+
 @media screen and (max-width: 1024px) {
   .dashboard-table__cell:first-child {
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
@@ -88,6 +90,10 @@ span.row span.pl-2 {
   .dashboard-table__cell:nth-child(-n + 2) {
     width: 15%;
     text-align: left;
+  }
+
+  .dashboard-table__container {
+    width: 91.6%;
   }
 }
 
